test/asm/concat-string-literals.err
ERROR: concat-string-literals.asm(17):
    syntax error
error: Assembly aborted (1 errors)!
